--- a/icons.qrc
+++ b/icons.qrc
@@ -35,5 +35,12 @@
     <file>icons/unpaid.png</file>
     <file>icons/unlock.png</file>
     <file>icons/zoom.png</file>
+    <file>icons/bg.png</file>
+    <file>icons/navlogo.png</file>
+    <file>icons/dash_downArrow.png</file>
+    <file>icons/dash_upArrow_small.png</file>
+    <file>icons/dash_downArrow_small.png</file>
+    <file>icons/dash_leftArrow_small.png</file>
+    <file>icons/dash_rightArrow_small.png</file>
   </qresource>
 </RCC>
