Dash changes to gui/(qt|stdio.py|text.py), icons.qrc

--- a/icons.qrc
+++ b/icons.qrc
@@ -1,6 +1,6 @@
 <RCC>
   <qresource prefix="/" >
-    <file>icons/electrum.png</file>
+    <file>icons/electrum-dash.png</file>
     <file>icons/clock1.png</file>
     <file>icons/clock2.png</file>
     <file>icons/clock3.png</file>
@@ -43,12 +43,16 @@
     <file>icons/speaker.png</file>
     <file>icons/trezor_unpaired.png</file>
     <file>icons/trezor.png</file>
-    <file>icons/trustedcoin-status.png</file>
-    <file>icons/trustedcoin-wizard.png</file>
     <file>icons/unconfirmed.png</file>
     <file>icons/unpaid.png</file>
     <file>icons/unlock.png</file>
     <file>icons/warning.png</file>
     <file>icons/zoom.png</file>
+    <file>icons/navlogo.png</file>
+    <file>icons/dash_downArrow.png</file>
+    <file>icons/dash_upArrow_small.png</file>
+    <file>icons/dash_downArrow_small.png</file>
+    <file>icons/dash_leftArrow_small.png</file>
+    <file>icons/dash_rightArrow_small.png</file>
   </qresource>
 </RCC>
