--- a/gui/kivy/uix/ui_screens/about.kv
+++ b/gui/kivy/uix/ui_screens/about.kv
@@ -1,7 +1,7 @@
 #:import VERSION electrum_axe.version.ELECTRUM_VERSION
 
 Popup:
-    title: _("About Electrum-DASH")
+    title: _("About Electrum-AXE")
     BoxLayout:
         orientation: 'vertical'
         spacing: '10dp'
@@ -38,7 +38,7 @@ Popup:
                 text: '\n'.join(['Thomas Voegtlin', 'Neil Booth', 'Akshay Arora'])
                 size_hint_x: 0.6
         TopLabel:
-            text: _('Distributed by Electrum-DASH Technologies GmbH')
+            text: _('Distributed by Electrum-AXE Technologies GmbH')
             padding: '0dp', '20dp'
         Widget:
             size_hint: None, 0.5
