--- a/gui/kivy/uix/ui_screens/about.kv
+++ b/gui/kivy/uix/ui_screens/about.kv
@@ -29,7 +29,7 @@ Popup:
                 text: '[color=6666ff][ref=x]https://axerunners.com[/ref][/color]'
                 on_ref_press:
                     import webbrowser
-                    webbrowser.open("https://electrum-axe.org")
+                    webbrowser.open("https://axerunners.com")
                 size_hint_x: 0.6
             TopLabel:
                 text: _('Developers')
