--- a/gui/kivy/uix/ui_screens/about.kv
+++ b/gui/kivy/uix/ui_screens/about.kv
@@ -35,10 +35,10 @@ Popup:
                 text: _('Developers')
                 size_hint_x: 0.4
             TopLabel:
-                text: '\n'.join(['Charlie', 'ddude'])
+                text: '\n'.join(['charlie137', 'ddude'])
                 size_hint_x: 0.6
         TopLabel:
-            text: _('Distributed by AxeRunners')
+            text: _('Distributed by AXErunners')
             padding: '0dp', '20dp'
         Widget:
             size_hint: None, 0.5
