--- a/icons.qrc
+++ b/icons.qrc
@@ -64,13 +64,17 @@
     <file>icons/axe_rightArrow_small.png</file>
     <file>icons/checkbox/checked.png</file>
     <file>icons/checkbox/unchecked.png</file>
+    <file>icons/checkbox/unchecked-dark.png</file>
     <file>icons/checkbox/indeterminate_disabled.png</file>
     <file>icons/checkbox/checked_disabled.png</file>
     <file>icons/checkbox/unchecked_disabled.png</file>
+    <file>icons/checkbox/unchecked_disabled-dark.png</file>
     <file>icons/checkbox/indeterminate.png</file>
     <file>icons/radio/checked.png</file>
     <file>icons/radio/unchecked.png</file>
+    <file>icons/radio/unchecked-dark.png</file>
     <file>icons/radio/checked_disabled.png</file>
     <file>icons/radio/unchecked_disabled.png</file>
+    <file>icons/radio/unchecked_disabled-dark.png</file>
   </qresource>
 </RCC>
