--- a/electrum_dash/gui/kivy/uix/ui_screens/about.kv
+++ b/electrum_dash/gui/kivy/uix/ui_screens/about.kv
@@ -1,7 +1,7 @@
 #:import VERSION electrum_dash.version.ELECTRUM_VERSION
 
 Popup:
-    title: _("About Dash-Electrum")
+    title: _("About Dash Electrum")
     BoxLayout:
         orientation: 'vertical'
         spacing: '10dp'
