--- a/electrum_axe/gui/kivy/uix/ui_screens/about.kv
+++ b/electrum_axe/gui/kivy/uix/ui_screens/about.kv
@@ -1,7 +1,7 @@
 #:import VERSION electrum_axe.version.ELECTRUM_VERSION
 
 Popup:
-    title: _("About Electrum-AXE")
+    title: _("About AXE Electrum")
     BoxLayout:
         orientation: 'vertical'
         spacing: '10dp'
@@ -26,10 +26,10 @@ Popup:
                 size_hint_x: 0.4
             TopLabel:
                 markup: True
-                text: '[color=6666ff][ref=x]https://electrum.axe.org[/ref][/color]'
+                text: '[color=6666ff][ref=x]https://axerunners.com[/ref][/color]'
                 on_ref_press:
                     import webbrowser
-                    webbrowser.open("https://electrum.axe.org")
+                    webbrowser.open("https://axerunners.com")
                 size_hint_x: 0.6
             TopLabel:
                 text: _('Developers')
