--- a/electrum_dash/gui/kivy/main.kv
+++ b/electrum_dash/gui/kivy/main.kv
@@ -346,7 +346,9 @@
     title: ''
     description: ''
     size_hint: 1, None
-    height: '60dp'
+    height: self.minimum_height
+    padding: 0, '10dp', 0, '10dp'
+    spacing: '10dp'
     canvas.before:
         Color:
             rgba: (0.192, .498, 0.745, 1) if self.state == 'down' else (0.3, 0.3, 0.3, 0)
@@ -355,7 +357,6 @@
             pos: self.pos
     on_release:
         Clock.schedule_once(self.action)
-    Widget
     TopLabel:
         id: title
         text: self.parent.title
@@ -365,7 +366,6 @@
         text: self.parent.description
         color: 0.8, 0.8, 0.8, 1
         halign: 'left'
-    Widget
 
 
 
