--- a/electrum_axe/gui/kivy/uix/ui_screens/about.kv
+++ b/electrum_axe/gui/kivy/uix/ui_screens/about.kv
@@ -1,7 +1,7 @@
 #:import VERSION electrum_axe.version.ELECTRUM_VERSION
 
 Popup:
-    title: _("About AXE Electrum")
+    title: _("About Axe Electrum")
     BoxLayout:
         orientation: 'vertical'
         spacing: '10dp'
