--- a/electrum_axe/gui/kivy/uix/ui_screens/network.kv
+++ b/electrum_axe/gui/kivy/uix/ui_screens/network.kv
@@ -13,7 +13,7 @@ Popup:
                 SettingsItem:
                     value: _("{} connections.").format(app.num_nodes) if app.num_nodes else _("Not connected")
                     title: _("Status") + ': ' + self.value
-                    description: _("Connections with AXE Electrum servers")
+                    description: _("Connections with Axe Electrum servers")
                     action: lambda x: None
 
                 CardSeparator
