--- a/electrum_axe/gui/kivy/main.kv
+++ b/electrum_axe/gui/kivy/main.kv
@@ -421,8 +421,7 @@ BoxLayout:
         ActionView:
             id: av
             ActionPrevious:
-                app_icon: 'atlas://electrum_axe/gui/kivy/theming/light/logo'
-                app_icon_width: '100dp'
+                app_icon: app.app_icon
                 with_previous: False
                 size_hint_x: None
                 on_release: app.popup_dialog('network')
@@ -432,8 +431,8 @@ BoxLayout:
                 important: True
                 size_hint: 1, 1
                 bold: True
-                color: 0.7, 0.7, 0.7, 1
-                text: app.wallet_name
+                color: (.8, .5, 0, 1) if app.testnet else (.7, .7, .7, 1)
+                text: ('Testnet: ' if app.testnet else '') + app.wallet_name
                 font_size: '22dp'
                 #minimum_width: '1dp'
                 on_release: app.popup_dialog('status')
@@ -449,6 +448,9 @@ BoxLayout:
                 ActionOvrButton:
                     name: 'network'
                     text: _('Network')
+                ActionOvrButton:
+                    name: 'axe_net'
+                    text: _('Axe Network')
                 ActionOvrButton:
                     name: 'settings'
                     text: _('Settings')
