qt/kivy: rename Network to Electrum Network

--- a/electrum_axe/gui/kivy/main.kv
+++ b/electrum_axe/gui/kivy/main.kv
@@ -447,7 +447,7 @@ BoxLayout:
                     text: _('Wallets')
                 ActionOvrButton:
                     name: 'network'
-                    text: _('Network')
+                    text: _('Electrum Network')
                 ActionOvrButton:
                     name: 'axe_net'
                     text: _('Axe Network')
