--- a/electrum_axe/gui/kivy/uix/ui_screens/send.kv
+++ b/electrum_axe/gui/kivy/uix/ui_screens/send.kv
@@ -10,6 +10,7 @@ SendScreen:
     name: 'send'
     address: ''
     amount: ''
+    ps_txt: s.privatesend_txt()
     message: ''
     is_pr: False
     BoxLayout
@@ -35,6 +36,22 @@ SendScreen:
                     shorten: True
                     on_release: Clock.schedule_once(lambda dt: app.show_info(_('Copy and paste the recipient address using the Paste button, or use the camera to scan a QR code.')))
                     #on_release: Clock.schedule_once(lambda dt: app.popup_dialog('contacts'))
+            CardSeparator:
+                opacity: int(not root.is_pr)
+                color: blue_bottom.foreground_color
+            BoxLayout:
+                size_hint: 1, None
+                height: blue_bottom.item_height
+                spacing: '5dp'
+                Image:
+                    source: 'atlas://electrum_axe/gui/kivy/theming/light/privatesend'
+                    size_hint: None, None
+                    size: '22dp', '22dp'
+                    pos_hint: {'center_y': .5}
+                BlueButton:
+                    text: s.ps_txt
+                    shorten: True
+                    on_release: Clock.schedule_once(lambda dt: s.parent.ps_dialog())
             CardSeparator:
                 opacity: int(not root.is_pr)
                 color: blue_bottom.foreground_color
